--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# Application name
 spring.application.name=FinlyPal
+# Active Profile
+spring.profiles.active=dev
+# Database Configuration
+spring.datasource.url=XXXXXXX
+spring.datasource.username=XXXXXXX
+spring.datasource.password=XXXXXXX
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=
+spring.jpa.show-sql=true
