--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,34 @@
-# Application name
-spring.application.name=FinlyPal
 # Active Profile
 spring.profiles.active=dev
+# Application name
+spring.application.name=FinlyPal
 # Database Configuration
-spring.datasource.url=XXXXXXX
-spring.datasource.username=XXXXXXX
-spring.datasource.password=XXXXXXX
+spring.datasource.url=XXXXXXXXX
+spring.datasource.username=XXXXXXXXX
+spring.datasource.password=XXXXXXXXX
 # Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+# Mail Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=XXXXXXXXX
+spring.mail.password=XXXXXXXXX
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+# Swagger Configuration
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.operationsSorter=method
+#springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.defaultModelsExpandDepth=-1
+# Jwt Configuration
+application.jwt.secret=XXXXXXXXX
+application.jwt.accessTokenExpiration=86400000
+application.jwt.refreshTokenExpiration=604800000
+# Server Configuration
+server.port=8080
+server.servlet.context-path=/api/v1
+server.error.include-stacktrace=on_param
+# Logging Lever
+logging.level.org.springframework.security=DEBUG
