--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-vertex-ai-gemini</artifactId>
+            <version>1.0.0-M5</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
