--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,34 +1,37 @@
-# Active Profile
-spring.profiles.active=prod
 # Application name
 spring.application.name=FinlyPal
 # Database Configuration
-spring.datasource.url=XXXXXXXXX
-spring.datasource.username=XXXXXXXXX
-spring.datasource.password=XXXXXXXXX
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 # Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 # Mail Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=XXXXXXXXX
-spring.mail.password=XXXXXXXXX
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+# Gemini Configuration
+spring.ai.google.vertex.ai.api-key=${GOOGLE_API_KEY}
+spring.ai.google.vertex.ai.model=gems-pro
 # Swagger Configuration
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.operationsSorter=method
-#springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.defaultModelsExpandDepth=-1
 # Jwt Configuration
-application.jwt.secret=XXXXXXXXX
+application.jwt.secret=${JWT_SECRET}
 application.jwt.accessTokenExpiration=86400000
 application.jwt.refreshTokenExpiration=604800000
 # Server Configuration
 server.port=8080
 server.servlet.context-path=/api/v1
 server.error.include-stacktrace=on_param
-# Logging Lever
+# Logging Level
 logging.level.org.springframework.security=DEBUG
+logging.pattern.console=%clr(%d{yy-MM-dd E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(%logger{0}){blue} %clr(%m){faint}%n
