--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
             <artifactId>spring-ai-vertex-ai-gemini</artifactId>
             <version>1.0.0-M5</version>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.20.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
