--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Active Profile
-spring.profiles.active=prod
+spring.profiles.active=dev
 # Application name
 spring.application.name=FinlyPal
 # Database Configuration
